@@ -1,3 +1,8 @@
+2005-01-27 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
+   * Rewrite the base 256 to base 10 conversion, using string operation only.
+	 This allos us to get rid of the problematic 64bits integer type (does not
+	 alwyas exist on target platform).
+
 2005-01-27 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
    * Add construct and destructor to class gdcm::Debug to close the debug file
           automatically
